# xvideos.js

./: .gitignore  LICENSE  README.md  eslint.config.mjs  jest.config.js  nodemon.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  tsup.config.ts
src/: index.ts  types.d.ts  xvideos.ts
src/__tests__/: test.ts
src/api/: base.ts  videoScraper.ts
src/api/config/: config.ts
src/api/utils/: detailsParser.ts  parser.ts  validators.ts
src/api/videos/: details.ts  fresh.ts  (+3 more)
src/python/: .gitignore  README.md  publish.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/python/.github/workflows/: publish.yml
src/python/scraper/: __init__.py  main.py  xvideos.py
src/python/scraper/utils/: pagination.py  parser.py
src/python/scraper/utils/videos/: search.py
src/python/scraper/utils/videos/base/: base.py  video_scraper.py
src/python/scraper/utils/videos/base/config/: config.json  config.py
src/python/scraper/videos/: fresh.py  search.py  verified.py
src/python/scraper/videos/base/: __init__.py  base.py  pagination.py  pagination_function.py  parser.py  video_scraper.py
src/python/scraper/videos/base/config/: config.json  config.py
src/python/src/: main.py  xvideos.py
src/python/src/videos/: search.py
src/python/src/videos/base/: parser.py
src/python/src/videos/base/config/: config.py
src/python/tests/: test_scraper.py
src/python/xvideos/: main.py  xvideos.py
src/python/xvideos/videos/: __init__.py  verified.py
src/python/xvideos/videos/base/: video_scraper.py
src/python/xvideos/videos/base/config/: config.json
