[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "xvideos-py"
version = "0.1.0"
description = "A powerful Python library to scrape xvideos.com"
authors = ["OSintt <akumagamer123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0"
beautifulsoup4 = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
xvideos = 'src.main:main'

[tool.poetry.extras]
dev = ["pytest"]

[tool.poetry.scripts]
xvideos = 'src.main:main'
